# aegis

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  22-matrix.md  22-testing-report.md  30-day-product-plan.md  AEGIS_QA_REPORT.md  API.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CLIENT_DEMO.md  CONTRIBUTING.md  Dockerfile  MIGRATION_PENDING.md  PENTEST_BLOCKED_ITEMS.md  PRODUCT_PLAN.md  QA_PASS_REPORT.md  README.md  SECURITY.md  SPRINT.md  acp-demo.md  aegis-guide.md  agies-bussiness.md  arch-26.md  audit-final-22.md  audit-report.md  aws-test.md  aws.md  bug.md  bussines-left.md  conftest.py  during-testing.md  enterprise-ui-sprint-plan.md  final-test-live-matrix.md  final-test-live.md  final-testing.md  guide-arch-26.md  matrix-25.md  (+19 more)
.github/: CODEOWNERS  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-push-ecr.yml  deploy.yml  nightly_chaos.yml  nightly_soak.yml  nightly_verify.yml  release_bundle.yml  scheduled-backup.yml  scheduled-prune.yml  scheduled-status-page.yml  security_scan.yml  terraform.yml  test.yml  weekly-restore-drill.yml
acp/: __init__.py  cli.py
demos/: laptop-fallback.md  run_all_demos.py
demos/db_copilot/: .demo_creds.json  scripted_demo.py  setup_demo.py
demos/devops_agent/: .demo_creds.json  demo_script.md  k8s_signals.py  kubectl_wrapper.py  mock_k8s.py  scripted_demo.py  setup_demo.py
demos/live_agent/: .env.example  README.md  autonomous_agent.py
demos/shadow_to_enforce/: README.md
demos/support_agent/: .demo_creds.json  scripted_demo.py  setup_demo.py
docs/: README.md  SECRETS.md  SUMMARY.md  THREAT_MODEL.md  architecture-failure-modes.md  architecture_diagram.md  benchmark.md  contact.md  enforce-mode.md  enterprise-architecture-rationale.md  external-integration-guide.md  integrations-audit-2026-06-24.md  quickstart.md  system-invariants.md
docs/AEVF/: auditor-checklist.md  reference-audit-report.md  reference-bundle-2026-06.json  reference-bundle.md
docs/adr/: ADR-001-audit-chain-design.md  ADR-002-centralised-rbac-matrix.md  ADR-003-three-layer-tenant-isolation.md  ADR-004-opa-rego-vs-inline-python.md  ADR-005-ed25519-over-rsa-for-signing.md  ADR-006-customer-managed-kms-key-per-region.md  ADR-007-docker-compose-on-ec2-over-kubernetes.md  ADR-008-mesh-jwt-over-mtls.md  ADR-009-s3-object-lock-modes.md  ADR-010-per-incident-aevf-bundle.md  README.md  _template.md
docs/api/: authentication.md  error-codes.md  examples.md  reference.md
docs/architecture/: 10-stage-pipeline.md  data-model.md  decision-explorer.md  deployment-topology.md  flow-of-a-decision.md  multi-tenancy.md  system-overview.md  ui-primitives.md
docs/integrations/: evidence-export.md  sdk-wrappers.md
docs/introduction/: 60-second-tour.md  demo-packs.md  quickstart.md  what-is-aegis.md  why-runtime-governance.md
docs/legal/: README.md  baa-template.md  dpa-template.md  msa-template.md  sla-template.md
docs/operations/: deployment.md  disaster-recovery.md  incident-response.md  key-rotation.md  observability.md  oncall-rota.md  retention-policy.md  (+3 more)
examples/: agent.py  connect_to_acp.py  policy.yaml
infra/: .env.aws.template  alertmanager.yml  docker-compose.aws.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.uioverride.yml  docker-compose.yml  grafana-dashboards-provider.yml  init-db.sql  opa-config.yaml  pgbouncer.aws.ini  pgbouncer.ini  prometheus-rules-customer-slo.yml  prometheus-rules.yml  prometheus.yml  system-authz.rego
integrations/: PUBLISHING.md  README.md
migrations/: fix_billing_atomicity.sql
reports/: sprint2_baseline_profile.txt  sprint2_perf_after.json
scripts/: backfill_missing_usage.py  check_migrations.sh  e2e_full_test.py  generate_real_traffic.py  load_test.py  monitor_billing_integrity.py  reconcile_billing_gap.py  reinit_system.py  replay_audit_dlq.py  requirements.txt  reset_load_test.py  run_audit.py  seed_demo_data.py  verify_production.sh
sdk/: __init__.py  client.py  schemas.py  utils.py
sprints/: SPRINT_4_incident_storyline.md  SPRINT_5_iag_blast_radius.md  SPRINT_6_auto_remediation.md  SPRINT_7_threat_intel.md  SPRINT_8_performance_convergence.md
tests/: conftest.py  e2e_test_flow.py  firewall_validation.py  harness.py  load_test.py  test_action_semantics_policy.py  test_api_key_auth.py  test_api_key_is_active.py  test_arch26_critical_paths.py  test_are.py  test_audit_chain_properties.py  test_audit_chain_verifier.py  test_audit_fixes.py  test_billing_stripe.py  test_board_report.py  test_budget_approval.py  test_clerk_backend_api.py  test_clerk_validator.py  test_clerk_webhooks.py  test_compliance.py  test_decision_degraded_mode.py  test_decision_engine.py  test_decision_engine_properties.py  test_demo_spawn_mesh_operator.py  test_demo_workspace_blocked_paths.py  test_devops_governance.py  test_dollar_estimate.py  test_ei13_sbom_cve_diff.py  test_ei14_uptime_rollup.py  test_ei17_itsm_webhooks.py  test_ei18_webhook_secret_rotate.py  test_ei19_incident_aevf_bundle.py  test_ei20_webhook_telemetry.py  test_ei2_jira_integration.py  test_ei3_scim_compliance.py  test_ei6_servicenow_integration.py  test_ei9_turnstile.py  test_enterprise_hardening.py  test_execute_contract.py  test_explorer_endpoints.py  (+111 more)
tools/aegis_verify/: CHANGELOG.md  README.md  __init__.py  __main__.py  pyproject.toml  verifier.py
tools/aegis_verify/tests/: test_no_network.py  test_verifier.py
ui/: .dockerignore  .env.production  .gitignore  Dockerfile  _debug_demo_token.mjs  drive.mjs  health-check.sh  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  verify-setup.sh  vite.config.js
verifier/: README.md
voice-agent/: .gitignore
voice-agent/agent/: AGENT_V2.md  Dockerfile  pyproject.toml  pyrightconfig.json
voice-agent/agent/bm25_index/: index.pkl
voice-agent/agent/persona/: Modelfile
voice-agent/agent/src/: agent.py  ingest.py  modelfile.py  rag.py
voice-agent/agent/tests/: test_rag.py
vscode-extension/: .vscodeignore  README.md  package-lock.json  package.json  tsconfig.json
(+1163 files in other folders)
