[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "acp"
version = "0.2.0"
description = "Tamper-evident replay + runtime deny for AI agents."
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.11"
authors = [
    {name = "Abhishek Mishra", email = "abhishekmishra09896@gmail.com"},
]
keywords = ["ai", "agents", "audit", "policy", "security", "compliance", "ed25519", "merkle"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Monitoring",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
# Runtime dependencies for the customer-facing SDK only. Three small libs.
# Anything heavier (FastAPI, SQLAlchemy, Redis, etc.) lives under the
# `[server]` extras for self-hosting the full ACP stack.
dependencies = [
    "httpx>=0.28.1",
    "cryptography>=42",
]

[project.urls]
Homepage      = "https://github.com/Abhi-mishra998/aegis"
Documentation = "https://github.com/Abhi-mishra998/aegis#readme"
Repository    = "https://github.com/Abhi-mishra998/aegis"
Issues        = "https://github.com/Abhi-mishra998/aegis/issues"
Changelog     = "https://github.com/Abhi-mishra998/aegis/releases"

[project.scripts]
acp         = "acp.cli:main"
acp-archive = "acp.cli:archive_entry"

[project.optional-dependencies]
# Full ACP server stack — only needed when self-hosting the gateway + services.
# `pip install acp[server]` brings everything required to run uvicorn + the
# microservices in services/. Customers using only the SDK skip this entirely.
server = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy[asyncio]",
    "asyncpg",
    "redis>=4.2.0",
    "pydantic[email]",
    "pydantic-settings",
    "python-jose[cryptography]",
    "structlog",
    "prometheus-fastapi-instrumentator",
    "opentelemetry-api",
    "opentelemetry-sdk",
    "opentelemetry-instrumentation-fastapi",
    "opentelemetry-exporter-otlp",
    "opentelemetry-exporter-otlp-proto-http",
    "opentelemetry-semantic-conventions",
    # Sprint 8 — Aegis MCP server exposes governance tools (evaluate /
    # receipts / verify-chain / blast-radius) to MCP-aware clients
    # (Claude Desktop, Cursor, VS Code).
    "mcp>=0.5",
    "alembic",
    "tenacity",
    "bcrypt",
    "prometheus-client",
    "groq",
    "reportlab>=4.0",
    "livekit-api>=0.8",
    # Sprint 9 — SSM/KMS signing-key provider (audit service prod-guard
    # refuses LocalFile when AEGIS_ENV=prod). Required for /receipts/key
    # public-key endpoint and the receipt signing path.
    "boto3>=1.34",
]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "hypothesis",
    "ruff",
    "mypy",
    "locust",
    # psycopg2-binary is used by scripts/ops/{export_tenant,reconcile,
    # redact_tenant_pii}.py and scripts/reconcile_billing_gap.py — sync
    # psycopg2 is chosen there because the ops scripts run outside the
    # asyncio service runtime. Declaring it here so `pip install -e .[dev]`
    # produces a runnable ops environment.
    "psycopg2-binary",
]

# Customer wheel ships only the public SDK surface. Server-side modules
# (`services/`, `sdk.common`, `sdk.client`, `sdk.utils`) are excluded — they
# are bundled by the self-hosted server install which runs from source.
[tool.setuptools]
packages = ["acp", "sdk", "sdk.acp_client"]


[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["services", "sdk", "tests"]
addopts = "-m 'not integration'"
markers = [
    "integration: requires a live Docker stack (deselected by default)",
]