[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aegis-aevf"
version = "1.0.0"
description = "Offline verifier for Aegis evidence bundles (AEVF aevf/0.1.0). Zero network calls, single dep."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [{name = "Aegis ACP"}]
keywords = ["security", "compliance", "audit", "aevf", "eu-ai-act", "soc2", "nist-ai-rmf", "dpdp", "ed25519", "merkle"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Information Technology",
    "Topic :: Security",
    "Topic :: Security :: Cryptography",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "cryptography>=42.0",
]

[project.urls]
Homepage      = "https://github.com/Abhi-mishra998/aegis"
Documentation = "https://github.com/Abhi-mishra998/aegis/blob/main/docs/AEVF/spec.md"
Repository    = "https://github.com/Abhi-mishra998/aegis"
"Bug Tracker" = "https://github.com/Abhi-mishra998/aegis/issues"

[project.scripts]
aegis-verify = "aegis_verify.__main__:main"

[tool.setuptools]
packages = ["aegis_verify"]
package-dir = {"aegis_verify" = "."}
